[gd_scene load_steps=7 format=3 uid="uid://dapg7iw0ca38o"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_b0fxm"]

[sub_resource type="FontVariation" id="FontVariation_1ltnh"]

[sub_resource type="LabelSettings" id="LabelSettings_3r0kd"]
line_spacing = 5.0
font = SubResource("FontVariation_1ltnh")
font_size = 34
font_color = Color(0.864512, 7.71055e-05, 0.678341, 1)
outline_size = 11
outline_color = Color(0.00139853, 0.000428424, 0.000652536, 1)
shadow_size = 1000

[sub_resource type="FontVariation" id="FontVariation_pof24"]

[sub_resource type="FontVariation" id="FontVariation_l8n7c"]
base_font = SubResource("FontVariation_pof24")
variation_face_index = 5
variation_embolden = -0.85

[sub_resource type="LabelSettings" id="LabelSettings_gmw3p"]
font = SubResource("FontVariation_l8n7c")
font_size = 36
font_color = Color(0.360932, 0.334937, 0.608967, 1)
outline_size = 10

[node name="MenuContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0fxm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -91.5
offset_right = 244.5
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ButtonsContainer"]
layout_mode = 2
text = "Shadow Resonate"
label_settings = SubResource("LabelSettings_3r0kd")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ButtonsContainer/HBoxContainer"]
layout_mode = 2
text = "Username:"
label_settings = SubResource("LabelSettings_gmw3p")

[node name="UsernameInput" type="LineEdit" parent="ButtonsContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27

[node name="ErrorLabel" type="Label" parent="ButtonsContainer/HBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Difficulty"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
